# clickindex

./: .gitignore  LICENSE.txt  MANIFEST.txt  README.markdown  pyproject.toml  requirememts.txt  setup.cfg  setup.py
clickindex/: __init__.py  indexing.py  test.py
storage/: default__vector_store.json  docstore.json  index_store.json
test/: test_indexing.py
