[metadata]
name = clickindex
version = 0.1.1
description = A Python package for indexing documents using various chunking strategies .
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = MIT
url = https://github.com/iamsandeepprasad/clickindex
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pandas==2.2.3,
    langchain==0.3.25,
    langchain-community==0.3.23,
    langchain_experimental==0.3.4,
    llama-index==0.12.34,
    llama-index-embeddings-gemini==0.3.2,
    llama-index-embeddings-huggingface==0.5.3,
    llama-index-vector-stores-faiss==0.4.0,
    faiss-cpu==1.11.0

[options.packages.find]
include = clickindex*